url: http://localhost:8080
---
# Pressing backspace removes the last character.
- launchApp
- tapOn: "1"
- tapOn: "2"
- tapOn: "3"
- assertVisible: "123"
- tapOn:
    text: "\u21d0"
- assertVisible: "12"
- takeScreenshot: .maestro/screenshots/08_backspace
